[package]
name = "cross_caller"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

cross_callee = { path = "../cross_callee", version = "0.1.0", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "cross_caller"
path = "cross_caller.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # No rlib needed here, since no other contract calls this contract at the moment.  However, it's good practice to always allow
    # other contracts to call a contract, and is mandatory if a contract will be registered within the Compose capability
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "cross_callee/std",
]
ink-as-dependency = []
