[package]
name = "delegator"
version = "0.0.1"
authors = ["author"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }

# adder = { version = "3.0.0-rc3", path = "adder", default-features = false, features = ["ink-as-dependency"] }
# subber = { version = "3.0.0-rc3", path = "subber", default-features = false, features = ["ink-as-dependency"] }
# accumulator = { version = "3.0.0-rc3", path = "accumulator", default-features = false, features = ["ink-as-dependency"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

[lib]
name = "delegator"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # "adder/std",
    # "subber/std",
    # "accumulator/std",
]
ink-as-dependency = []
